fix: text align on todo title fixed.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -21,7 +21,7 @@
 
 	@media (min-width < 760px) {
 		max-width: 100%;
-		justify-content: start;
+		justify-content: stretch;
 	}
 }
 
@@ -35,6 +35,14 @@
 	border-radius: 1rem;
 	background-color: bisque;
 	padding: 1rem;
+	@media (min-width < 1024px) {
+		flex-direction: column;
+	}
+	p {
+		text-align: center;
+		margin: 0;
+		padding: 0;
+	}
 }
 
 .titleAndStatus {
